# chad-input

./: .gitignore  float.c  int.c  meson.build  test_input.txt  utils.c
.cache/clangd/index/: common.c.7496B54F50F1B0C2.idx  common.h.BF96220067840322.idx  common_utils.c.C2B73C2ED504C900.idx  common_utils.c.C97008C1BAF7CCF7.idx  double.c.E1DBF0B719EFDC54.idx  float.c.E9FF24B03664901B.idx  input.c.373FD3F34E25CAFF.idx  input.h.3E6AA24352895785.idx  input.h.F70137144B4F8940.idx  input_internals.h.48B23056C558D922.idx  int.c.0C426021A5EBC0DB.idx  int_utils.c.E1C8177AAC0F0008.idx  int_utils.c.EF0EBB12FB3DC295.idx  long_double.c.C196E6C69A1C6C7C.idx  long_double_utils.c.21B76BDCE84F177B.idx  long_double_utils.c.C7E47E0E95B3C80E.idx  long_int.c.B2B76F5F5E543FED.idx  long_long_int.c.B12764864D47740E.idx  main.c.6227C063818B8D5B.idx  test.c.04B189140C354163.idx  test.c.3E4022591DEB4FE1.idx  test.h.088EEF7750861488.idx  test.h.D8CD0F45647BC062.idx  test_check_input.c.F52207622F0A05BC.idx  test_common.c.4465F153D6F6A106.idx  test_common_utils.c.01636B416B60184E.idx  test_common_utils.c.020307DC638EB76B.idx  test_custom_input.c.687B0AC6A3136618.idx  test_input.h.246F64454ECAE1BD.idx  test_input.h.EF3207C8D18C85DE.idx  test_int.c.58AFEBE78175D39B.idx  test_int_utils.c.460BFB96F1D3811C.idx  test_int_utils.c.52A369C7989D8CE2.idx  test_long_double.c.5AD366EFE87158F5.idx  test_long_double_utils.c.885F2F9E99343C17.idx  test_long_double_utils.c.C09ECC12FC74F680.idx  test_overflow.c.5B8B9E78DA2FBF3E.idx  test_range.c.EEDF34657289C76B.idx  test_read.c.4F1C7FC3E87C8DAA.idx  test_truncate.c.084CB8B8FB3DF95B.idx  (+10 more)
src/: common.c  common.h  common_utils.c  double.c  float.c  input.h  input_internals.h  int.c  long_double.c  long_double_utils.c  long_int.c  long_long_int.c  main.c  test.h  utils.c
src/input/: common_utils.c  float_utils.c  input.h  int_utils.c  long_double_utils.c  long_int_utils.c
test/: test.c  test.h  test_common.c  test_common_utils.c  test_int.c  test_int_utils.c  test_long_double.c  test_long_double_utils.c  test_overflow.c  test_range.c  test_read.c  test_truncate.c  test_utils.c
test/input/: test_common_utils.c  test_input.h  test_int_utils.c  test_long_double_utils.c  utils.c
